Amending code for service-registry

--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,31 @@
 		<version>2.2.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+        
 	<groupId>Boardfinder</groupId>
 	<artifactId>APIgateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>APIGateway</name>
+                    <packaging>jar</packaging>
 	<description>API gateway for Boardfinder Microservice app</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
 	</properties>
+        
+                
 
 	<dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+                
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
@@ -36,6 +49,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	 
 	</dependencies>
 
 	<dependencyManagement>
