--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	 <dependency>
+	  <groupId>org.springframework.cloud</groupId>
+	  <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+	  <version>2.2.0.RELEASE</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<dependencyManagement>
