--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,4 +48,4 @@ zuul:
     eureka:
         client:
            service-url:
-                default-zone: http://eureka-server:8761/
+                default-zone: http://eureka-server:8761/eureka
