--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+         <dependency>
+            <groupId>Boardfinder</groupId>
+            <artifactId>Auth</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
                 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -49,7 +59,30 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	 
+	 <dependency>
+	  <groupId>javax.persistence</groupId>
+	  <artifactId>javax.persistence-api</artifactId>
+	  <version>2.2</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>javax.transaction</groupId>
+	  <artifactId>javax.transaction-api</artifactId>
+	  <version>1.3</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework.data</groupId>
+	  <artifactId>spring-data-jpa</artifactId>
+	  <version>2.2.1.RELEASE</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.eureka.gateway</groupId>
+	  <artifactId>spring-eureka-zuul</artifactId>
+	  <version>0.0.1-SNAPSHOT</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<dependencyManagement>
