--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,9 @@
 ## Configuration to name itseld as apigateway to Eureka
 spring.application.name=apigateway
 
+#boardfinder-active-tokens
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/active_tokens
+spring.datasource.username=root
+spring.datasource.password=THyvno74Haakon
+
