--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,9 +1,23 @@
 ## Configuration to name itseld as apigateway to Eureka
 spring.application.name=apigateway
 
-#boardfinder-active-tokens
+# Setting the server port to a HTTPS enabled port.
+server.port=8443
+
+# Database connection configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/active_tokens
+spring.datasource.url=jdbc:mysql://localhost:3306/boardfinder?serverTimezone=Europe/Stockholm
 spring.datasource.username=root
 spring.datasource.password=THyvno74Haakon
+
+# Configuration for SSL/HTTPS
+server.ssl.enabled = true
+# The format used for the keystore.
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/localhost.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=localhost
+# The alias mapped to the certificate
+server.ssl.key-alias=localhost
 
