--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -7,8 +7,8 @@ server.port=8443
 # Database connection configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/boardfinder?serverTimezone=Europe/Stockholm
-spring.datasource.username=root
-spring.datasource.password=THyvno74Haakon
+spring.datasource.username=boardfinder
+spring.datasource.password=boardfinder
 
 # Configuration for SSL/HTTPS
 server.ssl.enabled = true
