Clean up in code. nbactions in gitignore.

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-## Configuration to name itseld as apigateway to Eureka
+## Configuration to name itself as apigateway to Eureka Service Registry
 spring.application.name=apigateway
 
 # Setting the server port to a HTTPS enabled port.
